<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_drawer_capturar_imagem" />
        <item android:id="@+id/nav_fotos" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_drawer_galeria_fotos" />
        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/menu_drawer_slide_show" />
        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_drawer_tools" />
    </group>

    <item android:title="@string/menu_drawer_title_comunication">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="@string/menu_drawer_share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="@string/menu_drawer_send" />
        </menu>
    </item>

</menu>