<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_camara_activity_fotos" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_drawer_capturar_imagem" />
        <item android:id="@+id/nav_fotos_activity_fotos" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_drawer_galeria_fotos" />
        <item android:id="@+id/nav_slideshow_activity_fotos" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/menu_drawer_slide_show" />
        <item android:id="@+id/nav_manage_activity_fotos" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_drawer_tools" />
        <item android:id="@+id/menu_drawer_home" android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/menu_drawer_home" />
    </group>

</menu>